--- a/source/dev/_/parts/whatsapp.pug
+++ b/source/dev/_/parts/whatsapp.pug
@@ -5,5 +5,5 @@
 			.whatsapp__img
 				img(src="_/uploads/whatsapp-phone.png" alt="")
 			.whatsapp__content
-				.whatsapp__subtitle.h3 НАПИШИТЕ НАМ В #[img(src="_/uploads/whatsapp.svg" alt="")] whatsapp в один клик
+				.whatsapp__subtitle.h3 НАПИШИТЕ НАМ #[br.hidden-br]В #[img(src="_/uploads/whatsapp.svg" alt="")] whatsapp в один клик
 				a.whatsapp__btn.btn.--md.--bg-green(href="") НАПИСАТЬ В WHATSAPP
