--- a/source/dev/_/sys/sass/style.sass
+++ b/source/dev/_/sys/sass/style.sass
@@ -216,6 +216,12 @@ sup
 .overflow-disable
 	overflow: hidden
 
+.hidden-br
+	display: none
+
+.swipe
+	display: none
+
 .bg-wrap
 	z-index: 1
 	position: relative
@@ -230,6 +236,12 @@ sup
 			width: 100%
 			height: 100%
 			object-fit: cover
+
+.mob-nav
+	display: none
+
+
+
 
 .header
 	z-index: 100
@@ -281,6 +293,9 @@ sup
 		text-align: right
 		margin-left: auto
 		margin-right: 25px
+
+	&__i-phone
+		display: none
 
 .panel
 	border-radius: 0 0 8px 8px
@@ -1591,6 +1606,7 @@ sup
 			width: 100%
 			height: 100%
 			object-fit: cover
+			border-radius: 5px
 .quality
 	display: flex
 	align-items: center
@@ -1853,6 +1869,8 @@ sup
 	&__imgs
 		width: 530px
 
+	
+
 	&__btns
 		margin-top: 38px
 		align-items: center
@@ -1881,6 +1899,8 @@ sup
 				width: 100%
 				height: 100%
 				object-fit: cover
+	&__arrows
+		display: none
 	&__thumbs
 		position: absolute
 		left: 20px
