--- a/source/dev/_/parts/price.pug
+++ b/source/dev/_/parts/price.pug
@@ -1,38 +1,42 @@
+include ../sys/pug/vars
+
 .price
 	.case
 		.price__title.h1 СТОИМОСТЬ ОТ #[strong 300 р/м#[sup 2]]
 		.price__subtitle.h4 Это минимальная цена без материалов при объеме от 200 м#[sup 2]
-		.price__list.row
-			mixin pItem(img, name, price, text)
-				.price__item.p-item
-					.p-item__head
-						.p-item__img 
-							img(src=img alt="")
-						.p-item__title ТАРИФ
-						.p-item__name= name
-					.p-item__body
-						.p-item__text.t2!= text
-					.p-item__price.p
-						.p__title СТОИМОСТЬ
-						.p__value от #[var= price] РУБ/м#[sup 2]
-						.p__tog материалы
-					.p-item__foot.feedback
-						.feedback__title Рассчитайте точную стоимость #[br]по телефону за 2 минуты
-						.feedback__text Менеджер задаст уточняющие вопросы #[br]и сделает скидку в зависимости от объема
-						.feedback__input.input.--md.--bg-gray.--icon.--phone.--required
-							.input__wrap
-								input.input__area(type="tel" name="phone" placeholder="+7 ( ___ ) ___ - __ - __")
-								.input__icon
-									<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 480.56 480.56" style="enable-background:new 0 0 480.56 480.56;" xml:space="preserve"><path d="M365.354,317.9c-15.7-15.5-35.3-15.5-50.9,0c-11.9,11.8-23.8,23.6-35.5,35.6c-3.2,3.3-5.9,4-9.8,1.8	c-7.7-4.2-15.9-7.6-23.3-12.2c-34.5-21.7-63.4-49.6-89-81c-12.7-15.6-24-32.3-31.9-51.1c-1.6-3.8-1.3-6.3,1.8-9.4	c11.9-11.5,23.5-23.3,35.2-35.1c16.3-16.4,16.3-35.6-0.1-52.1c-9.3-9.4-18.6-18.6-27.9-28c-9.6-9.6-19.1-19.3-28.8-28.8	c-15.7-15.3-35.3-15.3-50.9,0.1c-12,11.8-23.5,23.9-35.7,35.5c-11.3,10.7-17,23.8-18.2,39.1c-1.9,24.9,4.2,48.4,12.8,71.3	c17.6,47.4,44.4,89.5,76.9,128.1c43.9,52.2,96.3,93.5,157.6,123.3c27.6,13.4,56.2,23.7,87.3,25.4c21.4,1.2,40-4.2,54.9-20.9	c10.2-11.4,21.7-21.8,32.5-32.7c16-16.2,16.1-35.8,0.2-51.8C403.554,355.9,384.454,336.9,365.354,317.9z"/><path d="M346.254,238.2l36.9-6.3c-5.8-33.9-21.8-64.6-46.1-89c-25.7-25.7-58.2-41.9-94-46.9l-5.2,37.1	c27.7,3.9,52.9,16.4,72.8,36.3C329.454,188.2,341.754,212,346.254,238.2z"/><path d="M403.954,77.8c-42.6-42.6-96.5-69.5-156-77.8l-5.2,37.1c51.4,7.2,98,30.5,134.8,67.2c34.9,34.9,57.8,79,66.1,127.5	l36.9-6.3C470.854,169.3,444.354,118.3,403.954,77.8z"/></svg>
-						button.feedback__btn.btn.--md.--bg-blue РАССЧИТАТЬ СТОИМОСТЬ
-						.feedback__messengers.messengers
-							.messengers__icons
-								.messengers__icon
-									<svg enable-background="new 0 0 24 24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" fill="#039be5" r="12"/><path d="m5.491 11.74 11.57-4.461c.537-.194 1.006.131.832.943l.001-.001-1.97 9.281c-.146.658-.537.818-1.084.508l-3-2.211-1.447 1.394c-.16.16-.295.295-.605.295l.213-3.053 5.56-5.023c.242-.213-.054-.333-.373-.121l-6.871 4.326-2.962-.924c-.643-.204-.657-.643.136-.953z" fill="#fff"/></svg>
-								.messengers__icon
-									<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path style="fill:#4CAF50;" d="M256.064,0h-0.128l0,0C114.784,0,0,114.816,0,256c0,56,18.048,107.904,48.736,150.048l-31.904,95.104	l98.4-31.456C155.712,496.512,204,512,256.064,512C397.216,512,512,397.152,512,256S397.216,0,256.064,0z"/><path style="fill:#FAFAFA;" d="M405.024,361.504c-6.176,17.44-30.688,31.904-50.24,36.128c-13.376,2.848-30.848,5.12-89.664-19.264	C189.888,347.2,141.44,270.752,137.664,265.792c-3.616-4.96-30.4-40.48-30.4-77.216s18.656-54.624,26.176-62.304	c6.176-6.304,16.384-9.184,26.176-9.184c3.168,0,6.016,0.16,8.576,0.288c7.52,0.32,11.296,0.768,16.256,12.64	c6.176,14.88,21.216,51.616,23.008,55.392c1.824,3.776,3.648,8.896,1.088,13.856c-2.4,5.12-4.512,7.392-8.288,11.744	c-3.776,4.352-7.36,7.68-11.136,12.352c-3.456,4.064-7.36,8.416-3.008,15.936c4.352,7.36,19.392,31.904,41.536,51.616	c28.576,25.44,51.744,33.568,60.032,37.024c6.176,2.56,13.536,1.952,18.048-2.848c5.728-6.176,12.8-16.416,20-26.496	c5.12-7.232,11.584-8.128,18.368-5.568c6.912,2.4,43.488,20.48,51.008,24.224c7.52,3.776,12.48,5.568,14.304,8.736	C411.2,329.152,411.2,344.032,405.024,361.504z"/></svg>
-							.messengers__link #[a(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") ИСПОЛЬЗОВАТЬ МЕССЕНДЖЕРЫ]
-			+pItem('_/uploads/price-1.png', 'МИНИМАЛЬНЫЙ', '300', '<h3>Что включено:</h3><ul><li>Грунтование</li><li>Выставление маяков</li><li>Оштукатуривание стен</li><li>Уборка мусора</li></ul>')
-			+pItem('_/uploads/price-2.png', 'СТАНДАРТ', '350', '<h3>Что включено:</h3><ul><li>Грунтование</li><li>Выставление маяков</li><li>Оштукатуривание стен</li><li>Затирка и глянцевание</li><li>Использование оцинкованных уголков</li><li>Уборка мусора</li></ul>')
-			+pItem('_/uploads/price-3.png', 'МАКСИМАЛЬНЫЙ', '390', '<h3>Что включено:</h3><ul><li>Грунтование</li><li>Выставление маяков</li><li>Оштукатуривание стен</li><li>Затирка и глянцевание под обои</li><li>Использование ПВХ уголков </li><li>и профиля примыкания</li><li>Уборка мусора</li><li>Ровные углы 90<sup>о</sup></li></ul>')
+		.price__slider
+			.price__list.row
+				mixin pItem(img, name, price, text)
+					.price__item.p-item
+						.p-item__head
+							.p-item__img 
+								img(src=img alt="")
+							.p-item__title ТАРИФ
+							.p-item__name= name
+						.p-item__body
+							.p-item__text.t2!= text
+						.p-item__price.p
+							.p__title СТОИМОСТЬ
+							.p__value от #[var= price] РУБ/м#[sup 2]
+							.p__tog материалы
+						.p-item__foot.feedback
+							.feedback__title Рассчитайте точную стоимость #[br]по телефону за 2 минуты
+							.feedback__text Менеджер задаст уточняющие вопросы #[br]и сделает скидку в зависимости от объема
+							.feedback__input.input.--md.--bg-gray.--icon.--phone.--required
+								.input__wrap
+									input.input__area(type="tel" name="phone" placeholder="+7 ( ___ ) ___ - __ - __")
+									.input__icon
+										<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 480.56 480.56" style="enable-background:new 0 0 480.56 480.56;" xml:space="preserve"><path d="M365.354,317.9c-15.7-15.5-35.3-15.5-50.9,0c-11.9,11.8-23.8,23.6-35.5,35.6c-3.2,3.3-5.9,4-9.8,1.8	c-7.7-4.2-15.9-7.6-23.3-12.2c-34.5-21.7-63.4-49.6-89-81c-12.7-15.6-24-32.3-31.9-51.1c-1.6-3.8-1.3-6.3,1.8-9.4	c11.9-11.5,23.5-23.3,35.2-35.1c16.3-16.4,16.3-35.6-0.1-52.1c-9.3-9.4-18.6-18.6-27.9-28c-9.6-9.6-19.1-19.3-28.8-28.8	c-15.7-15.3-35.3-15.3-50.9,0.1c-12,11.8-23.5,23.9-35.7,35.5c-11.3,10.7-17,23.8-18.2,39.1c-1.9,24.9,4.2,48.4,12.8,71.3	c17.6,47.4,44.4,89.5,76.9,128.1c43.9,52.2,96.3,93.5,157.6,123.3c27.6,13.4,56.2,23.7,87.3,25.4c21.4,1.2,40-4.2,54.9-20.9	c10.2-11.4,21.7-21.8,32.5-32.7c16-16.2,16.1-35.8,0.2-51.8C403.554,355.9,384.454,336.9,365.354,317.9z"/><path d="M346.254,238.2l36.9-6.3c-5.8-33.9-21.8-64.6-46.1-89c-25.7-25.7-58.2-41.9-94-46.9l-5.2,37.1	c27.7,3.9,52.9,16.4,72.8,36.3C329.454,188.2,341.754,212,346.254,238.2z"/><path d="M403.954,77.8c-42.6-42.6-96.5-69.5-156-77.8l-5.2,37.1c51.4,7.2,98,30.5,134.8,67.2c34.9,34.9,57.8,79,66.1,127.5	l36.9-6.3C470.854,169.3,444.354,118.3,403.954,77.8z"/></svg>
+							button.feedback__btn.btn.--md.--bg-blue РАССЧИТАТЬ СТОИМОСТЬ
+							.feedback__messengers.messengers
+								.messengers__icons
+									.messengers__icon
+										<svg enable-background="new 0 0 24 24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" fill="#039be5" r="12"/><path d="m5.491 11.74 11.57-4.461c.537-.194 1.006.131.832.943l.001-.001-1.97 9.281c-.146.658-.537.818-1.084.508l-3-2.211-1.447 1.394c-.16.16-.295.295-.605.295l.213-3.053 5.56-5.023c.242-.213-.054-.333-.373-.121l-6.871 4.326-2.962-.924c-.643-.204-.657-.643.136-.953z" fill="#fff"/></svg>
+									.messengers__icon
+										<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path style="fill:#4CAF50;" d="M256.064,0h-0.128l0,0C114.784,0,0,114.816,0,256c0,56,18.048,107.904,48.736,150.048l-31.904,95.104	l98.4-31.456C155.712,496.512,204,512,256.064,512C397.216,512,512,397.152,512,256S397.216,0,256.064,0z"/><path style="fill:#FAFAFA;" d="M405.024,361.504c-6.176,17.44-30.688,31.904-50.24,36.128c-13.376,2.848-30.848,5.12-89.664-19.264	C189.888,347.2,141.44,270.752,137.664,265.792c-3.616-4.96-30.4-40.48-30.4-77.216s18.656-54.624,26.176-62.304	c6.176-6.304,16.384-9.184,26.176-9.184c3.168,0,6.016,0.16,8.576,0.288c7.52,0.32,11.296,0.768,16.256,12.64	c6.176,14.88,21.216,51.616,23.008,55.392c1.824,3.776,3.648,8.896,1.088,13.856c-2.4,5.12-4.512,7.392-8.288,11.744	c-3.776,4.352-7.36,7.68-11.136,12.352c-3.456,4.064-7.36,8.416-3.008,15.936c4.352,7.36,19.392,31.904,41.536,51.616	c28.576,25.44,51.744,33.568,60.032,37.024c6.176,2.56,13.536,1.952,18.048-2.848c5.728-6.176,12.8-16.416,20-26.496	c5.12-7.232,11.584-8.128,18.368-5.568c6.912,2.4,43.488,20.48,51.008,24.224c7.52,3.776,12.48,5.568,14.304,8.736	C411.2,329.152,411.2,344.032,405.024,361.504z"/></svg>
+								.messengers__link #[a(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") ИСПОЛЬЗОВАТЬ МЕССЕНДЖЕРЫ]
+				+pItem('_/uploads/price-1.png', 'МИНИМАЛЬНЫЙ', '300', '<h3>Что включено:</h3><ul><li>Грунтование</li><li>Выставление маяков</li><li>Оштукатуривание стен</li><li>Уборка мусора</li></ul>')
+				+pItem('_/uploads/price-2.png', 'СТАНДАРТ', '350', '<h3>Что включено:</h3><ul><li>Грунтование</li><li>Выставление маяков</li><li>Оштукатуривание стен</li><li>Затирка и глянцевание</li><li>Использование оцинкованных уголков</li><li>Уборка мусора</li></ul>')
+				+pItem('_/uploads/price-3.png', 'МАКСИМАЛЬНЫЙ', '390', '<h3>Что включено:</h3><ul><li>Грунтование</li><li>Выставление маяков</li><li>Оштукатуривание стен</li><li>Затирка и глянцевание под обои</li><li>Использование ПВХ уголков </li><li>и профиля примыкания</li><li>Уборка мусора</li><li>Ровные углы 90<sup>о</sup></li></ul>')
+		+swipe('price', 'Чтобы посмотреть другие тарифы, <br>проведите в сторону')
 		.price__desc.h4 Включена доставка оборудования до 40 км
